Fix overflow for room name in calendar view

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -175,4 +175,7 @@
   font-size: 0.8em;
   color: #ccc;
   display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow-x: hidden;
 }
